# compare-videos

./: CMakeLists.txt  README.md  app.cpp  app.h  main.cpp  video.cpp  video.h
